--- a/css/styles.css
+++ b/css/styles.css
@@ -724,7 +724,7 @@ a.hire-btn:hover{
 /* 4 - Section
 ------------------------------------------------------------------------*/
 .section{
-    padding: 150px 0;
+    padding:  60px 0;
     position: relative;
     background-color: rgba(1,156,222,0.20);
 }
@@ -791,7 +791,7 @@ a.hire-btn:hover{
     background-color:rgba(0,0,0,0.25);
 }
 .parallax .container{
-  padding: 145px 20px;
+  padding: 60px 20px;
 }
 .parallax .title{
     margin-bottom: 80px;
@@ -2296,4 +2296,12 @@ a.hire-btn:hover{
     text-align: center;
     top: 50%;
     width: 40px;
+}
+
+video {
+  width: 30%;
+}
+
+#work{
+  background-image: url('../img/parallax/light-bulb.jpg');
 }
